addons/kyverno/policies/medtech-gdpr_art9_special_category_safeguards-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-gdpr_art9_special_category_safeguards
  annotations:
    rulehub.id: medtech.gdpr_art9_special_category_safeguards
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "medtech.gdpr_art9_special_category_safeguards: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
